# matrix_lib

./: README.md
src/: CMakeLists.txt  Makefile  s21_mainfunction.cc  s21_matrix_oop.h  s21_overload.cc  s21_private.cc  s21_public.cc
src/tests/: matr_test.cc
